# remotable

./: .gitignore  LICENSE  README.md  pyproject.toml  remotable.py  remote_table.py  requirements.txt
src/: remotable.py
src/remotable/: __init__.py  __main__.py
